--- a/index.html
+++ b/index.html
@@ -1543,10 +1543,16 @@
 </section><!--signature_box-->
 
 
-<aside class="top btn_top" >
+<aside class="top">
+  <input type="checkbox" id="chk_more">
+
+    <div class="more_box">
     <a class="bag"><i class="fa-solid fa-bag-shopping"></i></a>
     <a class="time"><i class="fa-solid fa-clock"></i></a>
-   <a href="#header" class="top_icon"><i class="fa-solid fa-angle-up"></i></a>
+  </div>
+  <label for="chk_more">
+  <a class="more"><i class="fa-solid fa-plus"></i></a></label>
+  <a href="#header" class="top_icon"><i class="fa-solid fa-angle-up"></i></a>
 </aside>
 
 <!-- <aside class="wing_box">
