--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </ul>
           </li><!--top-->
 
-          <li><a href="./sub_page/sub_index.html">하의</a>
+          <li class="point"><a href="./sub_page/sub_index.html">하의</a>
             <ul>
               <li>레깅스</li>
               <li>크롭레깅스</li>
