--- a/sub_page/sub_index.html
+++ b/sub_page/sub_index.html
@@ -42,7 +42,6 @@
         <li><a href="#">장바구니</a></li>
         <li><a href="#">검색</a></li>
       </ul>
-
       <ul class="gnb02">
         <li><a href="#" class="openPopup">로그인</a></li>
         <div class="login_popup">
@@ -62,13 +61,13 @@
               </div><!--idpw-->
 
               <div class="button_box">
-                <button type="button"  class="button_login">로그인</button>
+                <button type="button" class="button_login">로그인</button>
                 <button onclick="openWindow()" class="button_join">회원가입</button>
               </div>
             </div><!--login-->
           </div><!--wrap-->
         </div><!--login_popup-->
-        <li><a onclick="openWindow()">회원가입</a></li>
+        <li><a href="../join.html" target="_blank">회원가입</a></li>
         <li><a href="#">고객센터</a></li>
       </ul>
     </div><!--gnb-->
@@ -114,7 +113,7 @@
             </ul>
           </li><!--top-->
 
-          <li><a href="./sub_index.html">하의</a>
+          <li class="point"><a href="./sub_index.html">하의</a>
             <ul>
               <li>레깅스</li>
               <li>크롭레깅스</li>
