--- a/detail_page/detail_index.html
+++ b/detail_page/detail_index.html
@@ -54,13 +54,13 @@
                   </div><!--idpw-->
     
                   <div class="button_box">
-                    <button type="button"  class="button_login">로그인</button>
+                    <button type="button" class="button_login">로그인</button>
                     <button onclick="openWindow()" class="button_join">회원가입</button>
                   </div>
                 </div><!--login-->
               </div><!--wrap-->
             </div><!--login_popup-->
-            <li><a onclick="openWindow()">회원가입</a></li>
+            <li><a href="../join.html" target="_blank">회원가입</a></li>
             <li><a href="#">고객센터</a></li>
           </ul>
         </div><!--gnb-->
